# agent_with_mcp

./: .chat_history  .env.example  .gitignore  main.py  mcp_servers.json  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  agent.py  commands.py  config.py  constants.py  context_tracker.py  memory.py  prompts.py  threads.py  tools.py  ui.py
