[project]
name = "Lyra"
version = "0.1.0"
description = "Conversational AI agent with MCP tools, Ollama, and terminal UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["agent", "mcp", "ollama", "langgraph", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.17",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.50",
    "python-dotenv>=1.1.0",
    "psycopg[binary]>=3.2.0",
    "tiktoken>=0.7.0",
    "deepagents>=0.4.3",
]

[project.scripts]
lyra = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "src/"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
